--- a/package.json
+++ b/package.json
@@ -21,12 +21,16 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
-    "angular2-materialize": "^15.1.8",
+    "@ngx-translate/core": "^7.2.0",
+    "@ngx-translate/http-loader": "^1.0.2",
+    "@types/materialize-css": "^0.100.0",
+    "angular2-materialize": "^15.1.9",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "jquery": "^2.2.4",
     "materialize-css": "^0.100.1",
     "rxjs": "^5.4.1",
+    "socket.io-client": "^2.0.3",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
